--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codewithsam"
+    "url": "https://github.com/codewithsam/precepticon"
   },
   "author": "codewithsam@gmail.com",
   "license": "ISC"
